--- a/Impuzzible/Impuzzible.vcxproj
+++ b/Impuzzible/Impuzzible.vcxproj
@@ -146,7 +146,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="C_Data.cpp" />
+    <ClCompile Include="C_Input.cpp" />
+    <ClCompile Include="C_Renderer.cpp" />
     <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="C_Data.h" />
+    <ClInclude Include="C_Input.h" />
+    <ClInclude Include="C_Renderer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
